# ECE529-Project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.txt  main.cpp
Data/: README.txt
MATLAB/: DSPProjectmerge.m  DSPprojgrayDCT  DSPprojnewestgray
MATLAB/DWT/: DWT_Compression_complete.m  MATLAB_2_C.m  PrepareImageByLevel.asv  PrepareImageByLevel.m  SplitLevel.asv  SplitLevel.m  compressLevel.m  notworking.asv  notworking.m  outline.m  try1.m  try2.m  try3.m
src/: CMakeLists.txt  DCT.hpp  main.cpp
src/DCT/: CMakeLists.txt  DCT.cpp  DCT.hpp
src/Grading/: CMakeLists.txt  MSE.cpp  MSE.hpp
src/ThirdPartyLibraries/: CMakeLists.txt
src/ThirdPartyLibraries/fftw-3.3.5-dll64/: FFTW3fConfig.cmake
src/ThirdPartyLibraries/fftw-3.3.5-dll64/lib/: FFTW3.lib  FFTW3f.exp  FFTW3f.lib  libfftw3-3.exp  libfftw3l-3.exp  libfftw3l-3.lib
src/Thresholding/: CMakeLists.txt  Thresholding.cpp  Thresholding.hpp
src/Wavelets/: CMakeLists.txt  WaveletGenerator.cpp  WaveletGenerator.hpp  WaveletTransform.cpp  WaveletTransform.hpp
